# thunor-web

./: .coveragerc  .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .thunor_web_quickstart_deploy_key.enc  .travis.yml  Dockerfile  Dockerfile.base  README.md  docker-compose.app.nginx.yml  docker-compose.app.yml  docker-compose.base.yml  docker-compose.certbot.yml  docker-compose.complete.yml  docker-compose.nginx.yml  docker-compose.postgres.yml  docker-compose.services.yml  docker-compose.yml  docker-deploy.sh  docker-entrypoint.sh  generate-certificates.sh  generate-static.sh  hts.py  manage.py  migrate.sh  pyproject.toml  renew-certificates.sh  renovate.json  requirements-dev.txt  requirements.txt  thunorbld.py  thunorctl.py  webpack.config.js
.github/workflows/: test-and-deploy.yml
_conf/: nginx.certbot.conf
config-examples/: docker-compose.complete.yml  docker-compose.postgresonly.yml  nginx.base.conf  nginx.site-basic.conf  nginx.site-full.conf  renew-certs.sh  thunor-app.env  thunor-db.env  thunor-dev.env
pyhts/: _version.py  apps.py  forms.py  helpers.py  models.py  pandas.py  plate_parsers.py  plots.py  serve_file.py  tasks.py  urls.py  views.py
pyhts/api/: serializers.py  urls.py  views.py
pyhts/fixtures/: initial_data.json
pyhts/migrations/: 0001_initial.py  0001_squashed_0003_drug.py  0002_add_drug_order.py  0002_auto_20161017_2231.py  0002_auto_20161031_2014.py  0002_auto_20161112_0131.py  0002_plate_file_set_directory.py  0003_allow_null_drugs_doses.py  0003_auto_20161031_2159.py  0003_auto_20161115_0340.py  0003_drug.py  0004_auto_20161115_2030.py  0004_dataset_permissions.py  0004_plate_timepoint_secs.py  0005_auto_20161103_1907.py  0005_base_dataset_permissions.py  0005_platefile_dataset.py  0006_expt_id_date.py  0006_platefile_file_format.py  0007_control_handling.py  0008_well_statistics.py  (+3 more)
thunordjango/: settings.py  urls.py  wsgi.py
thunorweb/: _version.py  admin.py  apps.py  context_processors.py  debug.py  forms.py  helpers.py  models.py  pandas.py  plate_parsers.py  serve_file.py  tasks.py  urls.py  views.py
web/: settings.py  urls.py  wsgi.py
webpack-container/: .bootstraprc  Dockerfile  bootstrap-customisations.scss  generate-static.sh  package.json  plotly.js  thunor  webpack.config.js
(+196 files in other folders)
