[project]
name = "thunor-web"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "thunor>=1.0,<2",
    "numpy==2.5.0",
    "pandas==3.0.3",
    "plotly==6.8.0",
    "xlrd",
    "python-magic",
    "Django==6.0.6",
    "django-allauth==65.18.0",
    "django-crispy-forms==2.6",
    "crispy-bootstrap3==2024.1",
    "django-custom-user==1.1",
    "django-guardian==3.3.2",
    "django-invitations==2.1.0",
    "django-redis==7.0.0",
    "django-webpack-loader==3.2.4",
    "psycopg2==2.9.12",
    "sentry-sdk[django]==2.64.0",
    "uwsgi==2.0.31",
    "django-storages[s3]==1.14.6",
]

[dependency-groups]
dev = [
    "django-debug-toolbar",
    "coverage",
    "ruff",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
exclude = ["*/migrations/*", "*/fixtures/*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"manage.py" = ["F401"]
"thunordjango/settings.py" = ["F401"]

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
source = ["thunorweb", "thunordjango"]
omit = ["*/migrations/*", "thunorweb/_version.py"]
